--- a/MazeSolver/MazeSolver/MazeSolver.csproj
+++ b/MazeSolver/MazeSolver/MazeSolver.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Maze.cs" />
+    <Compile Include="Mouse.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Game\Program.cs" />
