--- a/MazeSolver/MazeSolver/MazeSolver.csproj
+++ b/MazeSolver/MazeSolver/MazeSolver.csproj
@@ -78,7 +78,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Game\Program.cs" />
     <Compile Include="Game\MazeSolverGame.cs" />
-    <Compile Include="Screens\Screen.cs" />
+    <Compile Include="Screens\MazeScreen.cs" />
+    <Compile Include="Screens\GameScreen.cs" />
     <Compile Include="Vertex.cs" />
   </ItemGroup>
   <ItemGroup>
